addd content in index.html files

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -7,4 +7,5 @@
 
 <!-- Content block -->
 {% block content %}
-<h4>Brownie's Blog</h4> {% endblock %}
+<h4>Brownie's Blog</h4> {{ macro.displayBlogs(blog) }}
+<p class="text-right"><a class="btn btn-primary" href="/blog/new/{{blog.id}}">Add blog</a> {% endblock %}
