--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -1,3 +1,5 @@
+{% extends 'bootstrap/base.html' %}
+
 <!-- Display all the blogs -->
 {% macro displayBlogs(blog_list)%} {% for blog in blog_list%}
 <div class="container">
