--- a/app/templates/fourOwfour.html
+++ b/app/templates/fourOwfour.html
@@ -1,4 +1,4 @@
-{% extends 'base.html'%} {% block content %}
+{% extends 'bootstrap/base.html' %} {% extends 'base.html'%} {% block content %}
 <h1><strong>Ooops!</strong></h1><br>
 <h4>We can't seem to find the page you're looking for.</h4> <br>
 <p>Error code: 404</p><br>
