--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -2,4 +2,11 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %}
 <!-- block content -->
 {% block content %}
-<h4>Brownie's Blog</h4> {{ blog.title }} {% endblock %}
+<h4>Brownie's Blog</h4> {{ blog.title }}
+<div class="container">
+  {{ blog.content }}
+  <h4>Comments:</h4>{% if comment %} {{ macro.displayComments(comment)}}
+  <hr> {%else%}
+  <h3 class="text-center">No comment </h3>{% endif %}
+  <p class="text-right"><a class="btn btn-primary" href="/blog/comment/new{{blog.id}}">Add a comment</a></p>
+</div>{% endblock %}
