converting markdown to HTML

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -3,9 +3,9 @@ body {
   background: #eee;
 }
 
-#navigate {
+/*#navigate {
   background-color: #3b5998;
-}
+}*/
 
 /*#contentinfo {
   line-height: 20px;
