--- a/app/templates/macros.html
+++ b/app/templates/macros.html
@@ -3,18 +3,25 @@
 <!-- Display all the blogs -->
 {% macro displayBlogs(blog_list)%} {% for blog in blog_list%}
 <div class="container">
-  <a href="/blog/{{blog.id}}">{{blog.title }}</a>
+  <h2><a href="/blog/{{blog.id}}">{{blog.title }}</a></h2>
+  <h4>{{blog.content}}</h4>
   <small>By: <i>{{ blog.user.username }}</i></small>
 
 </div>
 {% endfor %}{% endmacro %}
 
 <!-- Display comments -->
-<!-- Display all the blogs -->
-{% macro displayComments(comment_list)%} {% for comment in comment_list%}
-<div class="container">
-  <a href="/blog/comment/new{{comment.id}}">{{ comment.comment_section }}</a>
+
+<!-- {% macro displayComments(comment_list)%} {% for comment in comment_list%}
+<div class="container">{{ comment.comment_section }}
   <small>By: <i>{{ comment.user.username }}</i></small>
 
+</div>
+{% endfor %}{% endmacro %} -->
+
+<!-- display specific pitch -->
+{% macro displaySpecificBlog(specific_blog_list) %} {% for comment in specific_blog_list %}
+<div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 text-left">
+  <hr> {{comment.comment_section}}
 </div>
 {% endfor %}{% endmacro %}
