--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -8,4 +8,4 @@
 <!-- Content block -->
 {% block content %}
 <h4>Brownie's Blog</h4> {{ macro.displayBlogs(blog) }}
-<!-- <p class="text-right"><a class="btn btn-primary" href="/blog/new/{{blog.id}}">Add blog</a> {% endblock %} -->
+<p class="text-right"><a class="btn btn-primary" href="/blog/new/{{blog.id}}">Add blog</a> {% endblock %}
