--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,17 +7,24 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-      <a class="navbar-brand" href="/"> Home </a>
+      <a class="navbar-brand" href="/">Brownie's Blog</a>
     </div>
     <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <a class="navbar-brand text-center" href="/">Brownie's Blog</a>
+      <ul>
+        <li>Home</li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        {% if current_user.is_authenticated %}
-        <li>{{ current_user.username }}</li>
-        <li><a href="{{url_for('auth.logout')}}">Sign out </a></li>
+        {% if current_user.is_authenticated %} {% if current_user.is_admin %}
+        <li><a href="{{ url_for('.admin_dashboard') }}">Dashboard</a></li>
+        <li><a href="{{ url_for('admin.list_blogs') }}">Blogs</a></li>
         {% else %}
+        <li><a href="{{ url_for('.AdminDashboard') }}">Dashboard</a></li>
+        {% endif %}
+        <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
+        <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
+        {% else %}
+        <li><a href="{{ url_for('.index') }}">Home</a></li>
+        <li><a href="{{url_for('auth.logout')}}">Sign out </a></li>
         <li><a href="{{url_for('auth.login')}}">Sign in </a></li>
         {% endif %}
       </ul>
