--- a/app/templates/blog.html
+++ b/app/templates/blog.html
@@ -5,7 +5,7 @@
 <h4>Brownie's Blog</h4> {{ blog.title }}
 <div class="container">
   {{ blog.content }}
-  <h4>Comments:</h4>{% if comment %} {{ macro.displaySpecificBlog(comment)}}
+  <h4>Comments:</h4>{% if comments %} {{ macro.displaySpecificBlog(comments)}}
   <hr> {%else%}
   <h3 class="text-center">No comment </h3>{% endif %}
   <p class="text-right"><a class="btn btn-primary" href="/blog/new/{{blog.id}}">Add a comment</a></p>
