--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,6 +6,4 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %}
 
 <!-- Content block -->
-{% block content %}
-<h4>Brownie's Blog</h4> {{ macro.displayBlogs(blog) }}
-<!-- <p class="text-right"><a class="btn btn-primary" href="/blog/new/{{blog.id}}">Add blog</a> {% endblock %} -->
+{% block content %}{{ macro.displayBlogs(blog) }} {% endblock %}
