fix bug: display all blogs, delete blog

--- a/app/templates/admin/admin_dashboard.html
+++ b/app/templates/admin/admin_dashboard.html
@@ -14,6 +14,6 @@
   </div>
 </div>
 <div>
-  <p> {{macro.displayAdminBlogs(blog)}}</p>
+  <p> {{macro.displayAdminBlogs(blogs)}}</p>
 </div>
 {% endblock %}
