--- a/app/templates/homepage.html
+++ b/app/templates/homepage.html
@@ -7,5 +7,5 @@
 
 <!-- Content block -->
 {% block content %}
-<h4>Brownie's Blog</h4> {{ macro.displayBlogs(blog) }}
+<h4>Brownie's Blog</h4> {{ macro.displayBlogs(blogs) }}
 <!-- <p class="text-right"><a class="btn btn-primary" href="/blog/new/{{blog.id}}">Add blog</a> {% endblock %} -->
