--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -6,4 +6,6 @@
 <link rel="stylesheet" href="{{url_for('static',filename='css/index.css')}}"> {% endblock %}
 
 <!-- Content block -->
-{% block content %}{{ macro.displayBlogs(blog) }} {% endblock %}
+{% block content %}
+<h2 class="text-center"><i>Brownies</i></h2>
+<hr><br> {{ macro.displayBlogs(blogs) }} {% endblock %}
