--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -7,12 +7,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
               </button>
-      <a class="navbar-brand" href="/">Brownie's Blog</a>
+      <h5 class="text-center"><a class="navbar-brand" href="/">Home</a></h5>
     </div>
     <div class="navbar-collapse collapse">
-      <ul>
-        <li>Home</li>
-      </ul>
       <ul class="nav navbar-nav navbar-right">
         {% if current_user.is_authenticated %} {% if current_user.is_admin %}
         <li><a href="{{ url_for('.admin_dashboard') }}">Dashboard</a></li>
@@ -23,7 +20,6 @@
         <li><a href="{{ url_for('auth.logout') }}">Logout</a></li>
         <li><a><i class="fa fa-user"></i>  Hi, {{ current_user.username }}!</a></li>
         {% else %}
-        <li><a href="{{ url_for('.index') }}">Home</a></li>
         <li><a href="{{url_for('auth.logout')}}">Sign out </a></li>
         <li><a href="{{url_for('auth.login')}}">Sign in </a></li>
         {% endif %}
